--- a/style.css
+++ b/style.css
@@ -104,13 +104,13 @@ body { background: var(--bg); color: var(--white); direction: rtl; overflow: hid
 /* باری ناچالاک */
 .prayer-row.inactive {
     /* گۆڕینی ڕەنگی هێڵە سەوزەکە بۆ خۆڵەمێشییەکی گونجاو */
-    border-right-color: #475569 !important; 
+    border-right-color: #13623e !important; 
     
     /* کاڵکردنەوەی هەموو لاکێشەکە بۆ ئەوەی دیار بێت کە بێدەنگە */
-    opacity: 0.4 !important; 
+    opacity: 0.7 !important; 
     
     /* ئەگەر دەتەوێت کەمێک تاریکتر بێت لە باری ئاسایی */
-    background: rgba(15, 23, 42, 0.5) !important; 
+    background: rgba(15, 23, 42, 0.8) !important; 
 }
 
 .p-time { color: var(--cyan); font-weight: bold; font-size: 1.3rem; direction: ltr; font-variant-numeric: tabular-nums; }
