--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body { background: var(--bg); color: var(--white); direction: rtl; overflow: hid
     margin: 10px auto; /* بۆ ئەوەی بکەوێتە ناوەڕاست */
 }
 
-.green-dark-drov pdown { 
+.green-dark-dropdown { 
     width: 100% !important; 
     padding: 12px !important; 
     background: var(--green-dark) !important; 
